Fixing projects whitespace

--- a/src/components/Projects/projects.css
+++ b/src/components/Projects/projects.css
@@ -12,7 +12,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: flex-start;
-    gap: 2rem;
+    /* gap: 2rem; */
 }
 
 .projects-title{
